--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -1,7 +1,7 @@
 @import url(https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
 
 :root {
-  font-family: 'Spoqa Han Sans Neo', 'sans-serif', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: 'Spoqa Han Sans Neo', 'sans-serif', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
   font-weight: 400;
 
@@ -13,6 +13,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+* {
+  font-family: 'Spoqa Han Sans Neo', 'sans-serif';
 }
 
 a {
@@ -33,4 +37,8 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+button {
+  cursor: pointer;
 }
