--- a/Client/src/Components/Layout/layout.module.css
+++ b/Client/src/Components/Layout/layout.module.css
@@ -12,4 +12,15 @@
 
 .screen > article {
     flex-grow: 1;
+
+    display: flex;
+    height: 0;
+}
+
+.screen > article > main {
+    flex-grow: 1;
+    overflow: auto;
+
+    padding: 15px;
+    box-sizing: border-box;
 }
